[package]
name = "parachain-staking"
authors = ["PureStake"]
description = "parachain staking pallet for collator selection and reward distribution"
edition = "2018"
version = "3.0.0"

[dependencies]
log = { version = "0.4", default-features = false }
serde = { version = "1.0.126", optional = true }

# Substrate
frame-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", optional = true, default-features = false }
frame-support = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", default-features = false }
frame-system = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", default-features = false }
parity-scale-codec = { version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = [
	"derive",
] }
pallet-authorship = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev" }
pallet-session = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev" }
sp-arithmetic = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", default-features = false }
sp-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", default-features = false }
sp-std = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", default-features = false }
sp-staking = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", default-features = false }
pallet-collective = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", default-features = false }

pallet-xyk = { default-features = false, git = "https://github.com/mangata-finance/mangata-node", branch = "develop" }
mangata-types = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", default-features = false }
orml-tokens = { default-features = false, version = '0.4.1-dev', git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev" }
pallet-issuance = { default-features = false, git = "https://github.com/mangata-finance/mangata-node", branch = "develop" }
mp-multipurpose-liquidity = { default-features = false, git = "https://github.com/mangata-finance/mangata-node", branch = "develop" }
mp-traits = { default-features = false, git = "https://github.com/mangata-finance/mangata-node", branch = "develop" }

[dev-dependencies]
similar-asserts = "1.1.0"

orml-traits = { default-features = false, version = "0.4.1-dev", git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev" }
#pallet-assets-info = { default-features = false, git = "https://github.com/mangata-finance/mangata-node", branch = "develop" }
sp-core = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev" }
sp-io = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev" }
pallet-vesting-mangata = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev" }

[features]
default = ["std"]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"sp-runtime/std",
	"sp-std/std",
	"sp-staking/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"pallet-xyk/std",
	"orml-tokens/std",
	"pallet-issuance/std",
	"mp-multipurpose-liquidity/std",
	"mp-traits/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
